--- a/index.html
+++ b/index.html
@@ -10,5 +10,6 @@
     <h1>My first website</h1>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit libero illo sapiente cumque iste, dicta ex itaque ut quaerat non ipsam dignissimos fugiat culpa neque ipsa est nisi dolor aperiam!</p>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus fugit nihil quas iusto nobis quo odio error aliquid placeat, expedita qui repellendus iste unde quam magni, perferendis beatae veniam optio!</p>
-</body>
+    <p>ami onek valo</p>
+    </body>
 </html>
