--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h1>My first website</h1>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit libero illo sapiente cumque iste, dicta ex itaque ut quaerat non ipsam dignissimos fugiat culpa neque ipsa est nisi dolor aperiam!</p>
     <p>ami onek valo</p>
+    <h4>i'm a nill pori</h4>
 </body>
 </html>
